# subxt-workshop

./: .rustfmt.toml  Cargo.toml  README.md
src/: lib.rs
tests/: 01-get-block-number.rs  02-get-balance.rs  03-get-total-frozen.rs  04-get-first-n-accounts.rs  05-get-version.rs  06-transfer-balance.rs  07-estimate-inclusion-fee.rs  08-batch-transfer.rs  09-propose-spend.rs  10-approve-multisig.rs
