[package]
name = "subxt-workshop"
version = "0.1.0"
authors = ["Interlay Ltd <admin@interlay.io>"]
edition = "2021"
publish = false

[dependencies]
subxt = "0.22.0"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }

[dev-dependencies]
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
sp-keyring = "6.0.0"
futures = "0.3.13"
hex = "0.4.3"
serde = "1.0.136"
sp-rpc = "6.0.0"